{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 299,
  "lineage": "09cdac0a-4850-710c-f38e-84f6a01b3990",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3c3613126286a88",
            "arn": "arn:aws:ec2:us-east-1:471112842678:elastic-ip/eipalloc-0c3c3613126286a88",
            "association_id": "eipassoc-0194360779a90237b",
            "domain": "vpc",
            "id": "eipalloc-0c3c3613126286a88",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08eadca6764353e50",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-3-228-110-234.compute-1.amazonaws.com",
            "public_ip": "3.228.110.234",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "eipalloc-0c3c3613126286a88",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "back_despachos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:471112842678:instance/i-018a5ca1fde30129b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018a5ca1fde30129b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "proyecto-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0391807fa7ce88679"
              }
            ],
            "primary_network_interface_id": "eni-0391807fa7ce88679",
            "private_dns": "ip-10-0-2-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.195",
            "public_dns": "ec2-54-209-227-142.compute-1.amazonaws.com",
            "public_ip": "54.209.227.142",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0550318800e4f570f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061b9ebeeced9de5c",
            "tags": {
              "Name": "ec2-back-despachos"
            },
            "tags_all": {
              "Name": "ec2-back-despachos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04df2bc8f2149340b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "i-018a5ca1fde30129b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_key_pair.deployer",
            "aws_security_group.sg_alb",
            "aws_security_group.sg_backend",
            "aws_security_group.sg_rds",
            "aws_subnet.privada_1",
            "aws_subnet.privada_2",
            "aws_subnet.publica_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "back_ventas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:471112842678:instance/i-05b4938b64f13b9cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b4938b64f13b9cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "proyecto-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05c69d099b3afd303"
              }
            ],
            "primary_network_interface_id": "eni-05c69d099b3afd303",
            "private_dns": "ip-10-0-1-226.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-18-212-212-13.compute-1.amazonaws.com",
            "public_ip": "18.212.212.13",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f42aa4dd0148782",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0466b57f29a508f87",
            "tags": {
              "Name": "ec2-back-ventas"
            },
            "tags_all": {
              "Name": "ec2-back-ventas"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04df2bc8f2149340b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "i-05b4938b64f13b9cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_key_pair.deployer",
            "aws_security_group.sg_alb",
            "aws_security_group.sg_backend",
            "aws_security_group.sg_rds",
            "aws_subnet.privada_1",
            "aws_subnet.privada_2",
            "aws_subnet.publica_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:internet-gateway/igw-0ba4193659814d842",
            "id": "igw-0ba4193659814d842",
            "owner_id": "471112842678",
            "region": "us-east-1",
            "tags": {
              "Name": "proyecto-igw"
            },
            "tags_all": {
              "Name": "proyecto-igw"
            },
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "igw-0ba4193659814d842",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:loadbalancer/app/proyecto-alb/2001686725b5c3f3",
            "arn_suffix": "app/proyecto-alb/2001686725b5c3f3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "proyecto-alb-465552367.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112842678:loadbalancer/app/proyecto-alb/2001686725b5c3f3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "proyecto-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-051c436a7ffe0fc11"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0466b57f29a508f87"
              },
              {
                "subnet_id": "subnet-061b9ebeeced9de5c"
              }
            ],
            "subnets": [
              "subnet-0466b57f29a508f87",
              "subnet-061b9ebeeced9de5c"
            ],
            "tags": {
              "Name": "proyecto-alb"
            },
            "tags_all": {
              "Name": "proyecto-alb"
            },
            "vpc_id": "vpc-0d60fa39d7f924bde",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:loadbalancer/app/proyecto-alb/2001686725b5c3f3"
          },
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_subnet.publica_1",
            "aws_subnet.publica_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:listener/app/proyecto-alb/2001686725b5c3f3/f9216792ac824144",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-ventas/c50d32153463925e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112842678:listener/app/proyecto-alb/2001686725b5c3f3/f9216792ac824144",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:loadbalancer/app/proyecto-alb/2001686725b5c3f3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:listener/app/proyecto-alb/2001686725b5c3f3/f9216792ac824144"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg_ventas",
            "aws_security_group.sg_alb",
            "aws_subnet.publica_1",
            "aws_subnet.publica_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "despachos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-despachos/c72e411729de6e8d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:listener-rule/app/proyecto-alb/2001686725b5c3f3/f9216792ac824144/2f8fb958b0812694",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/v1/despachos*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112842678:listener-rule/app/proyecto-alb/2001686725b5c3f3/f9216792ac824144/2f8fb958b0812694",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:listener/app/proyecto-alb/2001686725b5c3f3/f9216792ac824144",
            "priority": 100,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:listener-rule/app/proyecto-alb/2001686725b5c3f3/f9216792ac824144/2f8fb958b0812694"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_listener.http",
            "aws_lb_target_group.tg_despachos",
            "aws_lb_target_group.tg_ventas",
            "aws_security_group.sg_alb",
            "aws_subnet.publica_1",
            "aws_subnet.publica_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_despachos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-despachos/c72e411729de6e8d",
            "arn_suffix": "targetgroup/tg-despachos/c72e411729de6e8d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/despachos",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-despachos/c72e411729de6e8d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112842678:loadbalancer/app/proyecto-alb/2001686725b5c3f3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-despachos",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-despachos/c72e411729de6e8d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_ventas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-ventas/c50d32153463925e",
            "arn_suffix": "targetgroup/tg-ventas/c50d32153463925e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/ventas",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-ventas/c50d32153463925e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112842678:loadbalancer/app/proyecto-alb/2001686725b5c3f3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-ventas",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-ventas/c50d32153463925e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "despachos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-despachos/c72e411729de6e8d,i-018a5ca1fde30129b,8081",
            "port": 8081,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-despachos/c72e411729de6e8d",
            "target_id": "i-018a5ca1fde30129b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "port": 8081,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-despachos/c72e411729de6e8d",
            "target_id": "i-018a5ca1fde30129b"
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_instance.back_despachos",
            "aws_key_pair.deployer",
            "aws_lb_target_group.tg_despachos",
            "aws_security_group.sg_alb",
            "aws_security_group.sg_backend",
            "aws_security_group.sg_rds",
            "aws_subnet.privada_1",
            "aws_subnet.privada_2",
            "aws_subnet.publica_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ventas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-ventas/c50d32153463925e,i-05b4938b64f13b9cf,8080",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-ventas/c50d32153463925e",
            "target_id": "i-05b4938b64f13b9cf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112842678:targetgroup/tg-ventas/c50d32153463925e",
            "target_id": "i-05b4938b64f13b9cf"
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_instance.back_ventas",
            "aws_key_pair.deployer",
            "aws_lb_target_group.tg_ventas",
            "aws_security_group.sg_alb",
            "aws_security_group.sg_backend",
            "aws_security_group.sg_rds",
            "aws_subnet.privada_1",
            "aws_subnet.privada_2",
            "aws_subnet.publica_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3c3613126286a88",
            "association_id": "eipassoc-0194360779a90237b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f87c837347026ceb",
            "network_interface_id": "eni-08eadca6764353e50",
            "private_ip": "10.0.1.208",
            "public_ip": "3.228.110.234",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0466b57f29a508f87",
            "tags": {
              "Name": "proyecto-nat"
            },
            "tags_all": {
              "Name": "proyecto-nat"
            },
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "nat-0f87c837347026ceb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.publica_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:route-table/rtb-0bce3dbe9e94c385f",
            "id": "rtb-0bce3dbe9e94c385f",
            "owner_id": "471112842678",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f87c837347026ceb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-privada"
            },
            "tags_all": {
              "Name": "rt-privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "rtb-0bce3dbe9e94c385f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.publica_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:route-table/rtb-0abb004cee9a8cdfc",
            "id": "rtb-0abb004cee9a8cdfc",
            "owner_id": "471112842678",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba4193659814d842",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-publica"
            },
            "tags_all": {
              "Name": "rt-publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "rtb-0abb004cee9a8cdfc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privada_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c40da3674ba5160",
            "region": "us-east-1",
            "route_table_id": "rtb-0bce3dbe9e94c385f",
            "subnet_id": "subnet-0ead7ff49dfedf476"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "rtbassoc-08c40da3674ba5160",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.privada",
            "aws_subnet.privada_1",
            "aws_subnet.publica_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privada_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030ee8eee8ef6cfbb",
            "region": "us-east-1",
            "route_table_id": "rtb-0bce3dbe9e94c385f",
            "subnet_id": "subnet-0ffb6d602cded372d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "rtbassoc-030ee8eee8ef6cfbb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.privada",
            "aws_subnet.privada_2",
            "aws_subnet.publica_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce9e59ee0e1e5200",
            "region": "us-east-1",
            "route_table_id": "rtb-0abb004cee9a8cdfc",
            "subnet_id": "subnet-0466b57f29a508f87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "rtbassoc-0ce9e59ee0e1e5200",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publica",
            "aws_subnet.publica_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0555ad4e989d7c4aa",
            "region": "us-east-1",
            "route_table_id": "rtb-0abb004cee9a8cdfc",
            "subnet_id": "subnet-061b9ebeeced9de5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "rtbassoc-0555ad4e989d7c4aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publica",
            "aws_subnet.publica_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:security-group/sg-051c436a7ffe0fc11",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051c436a7ffe0fc11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "proyecto-alb-sg",
            "name_prefix": "",
            "owner_id": "471112842678",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-alb"
            },
            "tags_all": {
              "Name": "sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "sg-051c436a7ffe0fc11",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:security-group/sg-04df2bc8f2149340b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04df2bc8f2149340b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051c436a7ffe0fc11"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051c436a7ffe0fc11"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "proyecto-backend-sg",
            "name_prefix": "",
            "owner_id": "471112842678",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-backend"
            },
            "tags_all": {
              "Name": "sg-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "sg-04df2bc8f2149340b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:security-group/sg-02afb203876a47e82",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02afb203876a47e82",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04df2bc8f2149340b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "proyecto-rds-sg",
            "name_prefix": "",
            "owner_id": "471112842678",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-rds"
            },
            "tags_all": {
              "Name": "sg-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "sg-02afb203876a47e82",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_security_group.sg_backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:subnet/subnet-0ead7ff49dfedf476",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ead7ff49dfedf476",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112842678",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subred-privada-1"
            },
            "tags_all": {
              "Name": "subred-privada-1"
            },
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "subnet-0ead7ff49dfedf476",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:subnet/subnet-0ffb6d602cded372d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffb6d602cded372d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112842678",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subred-privada-2"
            },
            "tags_all": {
              "Name": "subred-privada-2"
            },
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "subnet-0ffb6d602cded372d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:subnet/subnet-0466b57f29a508f87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0466b57f29a508f87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112842678",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subred-publica-1"
            },
            "tags_all": {
              "Name": "subred-publica-1"
            },
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "subnet-0466b57f29a508f87",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:subnet/subnet-061b9ebeeced9de5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061b9ebeeced9de5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112842678",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subred-publica-2"
            },
            "tags_all": {
              "Name": "subred-publica-2"
            },
            "vpc_id": "vpc-0d60fa39d7f924bde"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "subnet-061b9ebeeced9de5c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112842678:vpc/vpc-0d60fa39d7f924bde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0575609f260ae2d16",
            "default_route_table_id": "rtb-07d53a52d125baf4d",
            "default_security_group_id": "sg-0bc4558fade36d79c",
            "dhcp_options_id": "dopt-04a117ca7c6b155c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d60fa39d7f924bde",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d53a52d125baf4d",
            "owner_id": "471112842678",
            "region": "us-east-1",
            "tags": {
              "Name": "proyecto-vpc"
            },
            "tags_all": {
              "Name": "proyecto-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112842678",
            "id": "vpc-0d60fa39d7f924bde",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}